# pico-plane

./: CMakeLists.txt  README.md  receiver-hex.txt
app/: CMakeLists.txt
app/src/: main.cpp
crsf/: CMakeLists.txt  README.md
crsf/include/: crsf.h  crsf_protocol.h
crsf/include/crsf/: crc8.h  crsf.h  crsf_info.h  crsf_protocol.h
crsf/src/: crc8.cpp  crsf.cpp
hal/: CMakeLists.txt
hal/include/hal/: pico_led.h  servo_mg90s.h
hal/src/: pico_led.cpp  servo_mg90s.cpp
plane-stl/: Plane weight allocation spreadsheet
plane-stl/1 - Parts for both versions/Factory File/: Bush Tire Hub - PLA x2.factory  Main Gear Tire Hub - PLA x2.factory  Motor Pod + Lid - PETG.factory  Nose Gear Tire Hub - PLA.factory  Servo Trays, Main Gear Strut, Tail Wheel Bracket, Elev Control Horn - PLA.factory  Tail Wheel - TPE.factory
plane-stl/1 - Parts for both versions/GCode/: Bush Tire - TPE x2.gcode  Bush Tire Hub - PLA x2.gcode  Main Gear Tire Hub - PLA x2.gcode  Motor Pod + Lid - PETG.gcode  Nose Gear Tire Hub - PLA.gcode  Servo Trays, Main Gear Strut, Tail Wheel Bracket, Elev Control Horn - PLA.gcode  Tail Wheel - TPE.gcode  Tire - TPE x2.gcode
plane-stl/1 - Parts for both versions/STL/: Aileron Servo Tray - PLA.STL  Bush Tire Hub 1 - PLA.STL  Bush Tire Hub 2 - PLA.STL  Elev Control Horn - PLA.STL  Main Gear Tire Hub 1 - PLA.STL  Main Gear Tire Hub 2 - PLA.STL  Main Landing Gear Strut - PLA, ABS, ASA, or PETG.STL  Motor Pod - ABS, ASA, or PETG.STL  Motor Pod Lid - ABS, ASA, or PETG.STL  Nose Gear Tire Hub 1 - PLA.STL  Nose Gear Tire Hub 2 - PLA.STL  Servo Tray - PLA.STL  Tail Wheel - TPE.STL  Tail Wheel Bracket - PLA, ABS, ASA, or PETG.STL
plane-stl/2 - Parts for LW-PLA Version/: Cura 3DAeroventures LW-PLA Starter Profile.curaprofile  PrusaSlicer 3DAero LW-PLA Starter Config.ini
plane-stl/2 - Parts for LW-PLA Version/LW-PLA Factory Files/: 02-019-0013 Trigger Guard P1 x10.factory  (+13 more)
plane-stl/3 - Parts for PLA Version/: Cura 3DAero Bowden PLA Profile v2.curaprofile  Cura 3DAeroventures Starter PLA Profile.curaprofile  PrusaSlicer 3DAeroventures Starter PLA Profile Config 4-25-20.ini
(+34 files in other folders)
